# wg_challenge

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: config.py  file_system.py  main.py
app/test/: Dockerfile  main_test.py
